--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -16,7 +16,7 @@
                            formfield.fname.dirty &&
                            formfield.fname.errors.minlength
                         " class="alert alert-danger m-0 py-1 px-2">
-                            Enter minimum 10 character!
+                            Enter minimum 5 character!
                         </p>
                     </div>
                     <div class="form-group">
@@ -26,7 +26,7 @@
                            formfield.lname.dirty &&
                            formfield.lname.errors.minlength
                         " class="alert alert-danger m-0 py-1 px-2">
-                            Enter minimum 10 character!
+                            Enter minimum 5 character!
                         </p>
                     </div>
                     <div class="form-group">
@@ -64,12 +64,12 @@
                         <p *ngIf="
                            formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.minlength
                         " class="alert alert-danger m-0 py-1 px-2">
-                            minimum 10 digit required.
+                            minimum 5 digit required.
                         </p>
                         <p *ngIf="
                            formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.maxlength
                         " class="alert alert-danger m-0 py-1 px-2">
-                            max 10 digit required.
+                            max 8 digit required.
                         </p>
                     </div>
                     <div class="form-group">
@@ -77,7 +77,7 @@
                         <p *ngIf="
                            formfield.pswd.invalid && formfield.pswd.dirty && formfield.pswd.errors.minlength
                         " class="alert alert-danger m-0 py-1 px-2">
-                            Enter minimum 8 character!
+                            Enter minimum 5 character!
                         </p>
 
                     </div>
@@ -106,17 +106,19 @@
                         </select>
                     </div>
                     <div class="form-group security-query" [ngSwitch]="choose">
-                        <input type="text" class="form-control" autocomplete="off" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="'birthcountry'" [(ngModel)]="selectCountry" (click)="changeCountry()" #box (keyup.enter)="onEnter(box.value)"
-                        />
-                        <ul class="list-inline" *ngIf="countryChange">
-                            <li *ngFor="let item of country | filter:selectCountry;let i = index;" (click)="_selectcountry(item.country,i)">{{item.country}}</li>
-                        </ul>
-                        <input type="date" class="form-control" name="birthcountry" formControlName="birthdate" *ngSwitchCase="'birthDate'" />
+
+                        <input type="text" class="form-control" [typeahead]="states" adaptivePosition="true" placeholder="Birth Country *" autocomplete="off" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="'birthcountry'" />
+
+                        <ejs-datepicker id='datepicker' placeholder='Select a date' [value]='value' [min]='minDate' [max]='maxDate' formControlName="birthdate" *ngSwitchCase="'birthDate'"></ejs-datepicker>
+
+
                         <input type="text" class="form-control" placeholder="Birth Place *" name="birthplace" formControlName="birthplace" *ngSwitchCase="'birthPlace'" />
+
                     </div>
                 </div>
 
                 <input class="btnRegister" type="submit" value="Register" [disabled]="!registerDetails.valid" (click)="validateForm()" />
+
             </form>
         </div>
     </div>
